edite about style

--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
-<section class="home">
-    <h1>📌 ملخص المشروع: نظام تتبع الأطفال باستخدام LoRa و GPS</h1>
+<section class="about-contener">
+    <h2>📌 ملخص المشروع: نظام تتبع الأطفال باستخدام LoRa و GPS</h2>
     
-    <h2>بخصوص</h2>
+    <h3>بخصوص</h3>
     <p><bdi>📌 فكرة المشروع: يهدف هذا المشروع إلى تطوير نظام متكامل لتتبع موقع الأطفال باستخدام تقنية GPS وإرسال البيانات عبر شبكة LoRa منخفضة الطاقة. يعتمد المشروع على وحدة Arduino Nano مع GPS NEO-8M وLoRa لإرسال الموقع، بينما يتم استقبال البيانات باستخدام NodeMCU مع LoRa، وعرضها في موقع إلكتروني ديناميكي.</bdi></p>
 
-    <h2>🛠️ مكونات المشروع:</h2>
-    <h3>🔹 جهاز الإرسال (Transmitter):</h3>
+    <h3>🛠️ مكونات المشروع:</h3>
+    <h4>🔹 جهاز الإرسال (Transmitter):</h4>
     <ul>
         <li><strong>Arduino Nano</strong> – لمعالجة بيانات الموقع.</li>
         <li><strong>GPS NEO-8M</strong> – للحصول على إحداثيات الموقع الجغرافي.</li>
@@ -15,20 +15,20 @@
         <li><strong>Step-Up Convertor</strong> –   لرفع الفولتيه الى 5 فولت</li>
     </ul>
     
-    <h3>🔹 جهاز الاستقبال (Receiver):</h3>
+    <h4>🔹 جهاز الاستقبال (Receiver):</h4>
     <ul>
         <li><strong>NodeMCU ESP8266</strong> – لمعالجة البيانات القادمة من LoRa.</li>
         <li><strong>LoRa Module</strong> – لاستقبال بيانات الموقع.</li>
         <li><strong>اتصال Wi-Fi</strong> – لإرسال البيانات إلى الموقع الإلكتروني.</li>
     </ul>
 
-    <h3>🔹 الواجهة الأمامية (Web Interface):</h3>
+    <h4>🔹 الواجهة الأمامية (Web Interface):</h4>
     <ul>
         <li>موقع إلكتروني تفاعلي يعرض الموقع الحالي للطفل على خريطة <strong>Leaflet.js</strong>.</li>
         <li>تنقل ديناميكي بين الصفحات باستخدام <strong>JavaScript و HTML و CSS</strong>.</li>
     </ul>
 
-    <h2>🚀 طريقة العمل:</h2>
+    <h3>🚀 طريقة العمل:</h3>
     <ol>
         <li>يحصل <strong>GPS NEO-8M</strong> على إحداثيات الموقع.</li>
         <li>يقوم <strong>Arduino Nano</strong> بإرسال البيانات عبر <strong>LoRa</strong>.</li>
@@ -36,7 +36,7 @@
         <li>يتم عرض الموقع على خريطة في الموقع الإلكتروني.</li>
     </ol>
 
-    <h2>🎯 مميزات المشروع:</h2>
+    <h3>🎯 مميزات المشروع:</h3>
     <ul>
         <li>✅ <strong>استهلاك طاقة منخفض</strong> بفضل تقنية <strong>LoRa</strong>.</li>
         <li>✅ <strong>مدى طويل للاتصال</strong> دون الحاجة إلى شبكة إنترنت في جهاز الإرسال.</li>
